--- a/projects/minecraft/css/style.css
+++ b/projects/minecraft/css/style.css
@@ -25,8 +25,6 @@ body {
   letter-spacing: 1.5px;
   width: 100vw;
   height: 100vh;
-  /* cursor: url(../img/shovel.png),
-  auto; */
 }
 
 header {
@@ -36,6 +34,22 @@ header {
   margin-top: 100px;
 }
 
+.cursor-axe{
+  cursor: url(../img/axe.cur),
+  auto;
+}
+.cursor-shovel{
+  cursor: url(../img/shovel.cur),
+  auto;
+}
+.cursor-pickaxe{
+  cursor: url(../img/pickaxe.cur),
+  auto;
+}
+.cursor-hoe{
+  cursor: url(../img/hoe.cur),
+  auto;
+}
 .wrapper{
   display: flex;
   flex-direction: column;
@@ -51,7 +65,6 @@ header {
   align-items: stretch;
   position: relative;
   overflow: hidden;
-  -webkit-animation: sky 5s infinite;
   animation: sky 160s infinite;
 }
 @keyframes sky {
@@ -118,6 +131,7 @@ header {
 .inv-snow{  background: url(../img/inv-snow.png) no-repeat center center / cover;}
 .inv-stone{  background: url(../img/inv-stone.png) no-repeat center center / cover;}
 .inv-wood{  background: url(../img/inv-wood.png) no-repeat center center / cover;}
+.inv-silver{  background: url(../img/inv-silver.png) no-repeat center center / cover;}
 
 /* tools */
 .axe, .pickaxe, .shovel, .hoe, .inv{
@@ -199,7 +213,6 @@ header {
   list-style: none;
   flex-wrap: wrap;
   z-index: 100;
- 
 }
 
 /* default box = sky */
@@ -209,6 +222,11 @@ header {
   border: none;
   width: 4%;
   height: 5%;
+  transform: scale(0);
+  transition: 0.3s;
+}
+.box.animate{
+  transform: scale(1);
 }
 
 .box:hover{
@@ -232,3 +250,8 @@ header {
 .leaves{  background: url(../img/leaves.jpg) no-repeat center center / cover;}
 .grass{  background: url(../img/grass.jpg) no-repeat top center / cover;}
 .bush{  background: url(../img/bush.jpg) no-repeat top center / cover;}
+.gold{  background: url(../img/gold.jpg) no-repeat top center / cover;}
+.silver{  background: url(../img/silver.jpg) no-repeat top center / cover;}
+.diamond{  background: url(../img/diamond.jpg) no-repeat top center / cover;}
+.stone{  background: url(../img/stone.jpg) no-repeat top center / cover;}
+
