--- a/projects/TodoList/css/style.css
+++ b/projects/TodoList/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
 body {
   display: flex;
   justify-content: center;
-
   margin: 0;
   padding: 0;
   font-family: 'Indie Flower';
@@ -13,16 +13,10 @@ body {
 .title-done {
   font-size: 3em;
   color: #b83b5e;
-  margin-left: 25px;
 }
 
-.title-done {
-  font-size: 2em !important;
-}
-
-.fas,
 .far {
-  color: #6a2c70 !important;
+  color: #6a2c70;
 }
 
 .fa-plus {
@@ -30,7 +24,7 @@ body {
   position: absolute;
   right: 30px;
   top: 3%;
-  color: white !important;
+  color: white;
   vertical-align: center;
   margin-left: 8px;
   padding: 0.2em;
@@ -41,7 +35,7 @@ body {
 }
 
 .fa-plus:hover {
-  color: #6a2c70 !important;
+  color: #6a2c70;
   background-color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -50,18 +44,17 @@ body {
   position: absolute;
   top: 3%;
   left: 11%;
-  width: 20em;
+  width: 23em;
   font-family: "Rock Salt", "Indie Flower", "Shadows Into Light", cursive;
   font-size: 1em;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
 
-ul {
+ol {
   position: absolute;
   top: 8.93%;
   left: 2%;
-  list-style: none;
 }
 
 li {
@@ -107,16 +100,16 @@ input[type="text"] {
   padding-left: 0.5em;
 }
 
-.create > input {
-  background: #b83b5e;
-  font-weight: bolder;
+.task > input {
   border: none;
-  border-radius: 4px;
-}
-
-.create > input:focus-within {
-  background: #b83b5e;
-  color: white;
+  outline: 0;
+  text-indent: 20px;
+  font-size: 15px;
+  height: 1rem;
+  font-family: 'Indie Flower';
+  color: #b83b5e;
+  font-weight: bolder;
+  border-radius: 3px;
 }
 
 #display-done > .create > input {
@@ -145,10 +138,16 @@ input[type="text"] {
 
 .fa-trash-alt:hover {
   font-size: 24px;
-  color: red !important;
+  color: red;
 }
 
 .edit {
   margin-left: 8px;
-  height: 2.2em !important;
+  height: 2.2em;
+}
+
+.checkbox{
+  position: absolute;
+  top: 10%;
+  display: inline;
 }
