--- a/projects/TodoList/css/style.css
+++ b/projects/TodoList/css/style.css
@@ -2,16 +2,17 @@
 
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin: 0;
   padding: 0;
   font-family: 'Indie Flower';
   background-color: #fdf6a3;
 }
 
-.title,
-.title-done {
+.title {
   font-size: 3em;
+  margin: 20px;
   color: #b83b5e;
 }
 
@@ -20,10 +21,10 @@ body {
 }
 
 .fa-plus {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   position: absolute;
   right: 30px;
-  top: 3%;
+  top: 19px;
   color: white;
   vertical-align: center;
   margin-left: 8px;
@@ -42,8 +43,8 @@ body {
 
 #inputText {
   position: absolute;
-  top: 3%;
-  left: 11%;
+  top: 19px;
+  left: 55px;
   width: 23em;
   font-family: "Rock Salt", "Indie Flower", "Shadows Into Light", cursive;
   font-size: 1em;
@@ -53,8 +54,8 @@ body {
 
 ol {
   position: absolute;
-  top: 8.93%;
-  left: 2%;
+  top: 48px;
+  left: 13px;
 }
 
 li {
@@ -102,23 +103,20 @@ input[type="text"] {
 
 .task > input {
   border: none;
+  margin: 7px 20% 0px 2px;
+  padding-top: 4px;
   outline: 0;
-  text-indent: 20px;
-  font-size: 15px;
-  height: 1rem;
+  font-size: 14px;
+  height: 0.5rem;
   font-family: 'Indie Flower';
   color: #b83b5e;
-  font-weight: bolder;
-  border-radius: 3px;
-}
-
-#display-done > .create > input {
-  background-color: #54e346;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 .remove-container {
   position: absolute;
-  top: 3%;
+  top: 23px;
   left: -5px;
   margin-left: 1em;
   text-align: center;
@@ -131,7 +129,7 @@ input[type="text"] {
 }
 
 .fa-trash-alt {
-  font-size: 24px;
+  font-size: 20px;
   color: #6a2c70;
   transition: .3s;
 }
@@ -146,8 +144,24 @@ input[type="text"] {
   height: 2.2em;
 }
 
-.checkbox{
-  position: absolute;
-  top: 10%;
-  display: inline;
+.task{
+  display: flex;
+}
+
+.fa-square-o{
+  align-self: center;
+}
+
+.fa-square-o:hover{
+  color: #3d1941;
+}
+
+.fa-check-square{
+  color: #6a2c70;
+  align-self: center;
+}
+
+.small{
+  align-self: center;
+  font-size: 15px;
 }
