--- a/projects/Table/css/style.css
+++ b/projects/Table/css/style.css
@@ -14,6 +14,10 @@ body {
   background: linear-gradient(to right, #25c481, #25b7c4);
 }
 
+i {
+  cursor: pointer;
+}
+
 /* TABLE */
 .container {
   display: flex;
@@ -102,4 +106,8 @@ button {
 
 .fa-trash:hover {
   color: rgba(255, 0, 0, 0.8);
+}
+
+.editable {
+  color: aliceblue;   
 }
