--- a/react-exercises/src/App.css
+++ b/react-exercises/src/App.css
@@ -1,5 +1,9 @@
-/* horizontal line */
-hr {
-  height: 3px;
-  color: #282c34;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+hr{
+  border: 1px solid #000;
 }
