--- a/react-exercises/src/components/cards/Card.css
+++ b/react-exercises/src/components/cards/Card.css
@@ -3,12 +3,14 @@
 .cards{
   display: flex;
   justify-content:space-evenly;
-  margin-bottom: 20px;
+  padding: 20px;
+   background-image: linear-gradient(to bottom right, red, yellow);
 }
 
 .card-container {
   overflow: hidden;
-  border-radius: 10px;
+  border: 1px solid #000;
+  border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 270px;
@@ -22,5 +24,5 @@
 .image {
   width: 100%;
   height: 250px;
-  object-fit: fill;
+  object-fit:cover;
 }
