--- a/react-exercises/src/components/quiz/Quiz.css
+++ b/react-exercises/src/components/quiz/Quiz.css
@@ -1,7 +1,17 @@
 /* Quiz */
 .quiz-container {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  background-color: rgb(135, 231, 255);
+}
+
+.quiz {
+  font-display: flex;
+  flex-direction: column;
+  justify-content:space-evenly;
+  border: 2px solid black;
   margin: 20px auto;
   height: 300px;
   width: 500px;
-  border: 2px solid black;
+  background-color: rgb(250, 215, 169);
 }
