--- a/react-exercises/src/components/hello/Hello.css
+++ b/react-exercises/src/components/hello/Hello.css
@@ -15,6 +15,8 @@
 
 .App-header {
   background-color: #282c34;
+    background-image: linear-gradient(to bottom right, #282c34, rgb(156, 80, 255));
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
