--- a/react-exercises/src/components/hideAndseek/HideAndSeek.css
+++ b/react-exercises/src/components/hideAndseek/HideAndSeek.css
@@ -1,8 +1,13 @@
+.hide-seek-wrapper{
+  background-image: linear-gradient(to bottom right, rgb(255, 0, 43), rgb(255, 80, 246));
+  padding: 20px;
+}
 .hide-seek-container{
-  margin: 20px auto;
+  margin: 0px auto;
   height: 300px;
   width: 300px;
   border: 2px solid black;
+  background-color: #fff;
 }
 
 .shy-box{
@@ -12,4 +17,10 @@
   background-color: rgb(243, 243, 133);
   border: 1px solid rgb(255, 145, 0);
   box-shadow: 0 0 5px #aaa;
+  transition: .3s;
+}
+
+.shy-box:hover{
+  box-shadow: 0 0 7px #aaa;
+  background-color: rgb(255, 255, 156);
 }
