--- a/react-exercises/src/components/spinner/Spinner.css
+++ b/react-exercises/src/components/spinner/Spinner.css
@@ -1,6 +1,6 @@
 
 .loader-container{
-  background-image: linear-gradient(to bottom right, #000, #333);
+	background: radial-gradient(#c5c5c5, #fff);
   height: 350px;
   display: flex;
   justify-content: center;
