--- a/react-exercises/src/components/quiz/Quiz.css
+++ b/react-exercises/src/components/quiz/Quiz.css
@@ -1,17 +1,28 @@
 /* Quiz */
 .quiz-container {
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-  background-color: rgb(135, 231, 255);
+  display: flex;
+  height: 350px;
+  background-image: linear-gradient(to bottom right, rgb(224, 61, 210), rgb(255, 145, 0));
 }
 
 .quiz {
-  font-display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content:space-evenly;
+  justify-content: space-between;
   border: 2px solid black;
-  margin: 20px auto;
+  margin: auto;
   height: 300px;
   width: 500px;
-  background-color: rgb(250, 215, 169);
+  background-image: linear-gradient(to bottom right, wheat, rgb(240, 177, 60));
+  box-shadow: 0 0 10px #000;
+}
+.quiz >* {
+  margin: auto;
+}
+
+.text-input {
+  border: none;
+  height: 25px;
+  margin-top: 10px;
+  box-shadow: 0 0 4px #000;
 }
