--- a/react-exercises/src/components/ex7.2-hide_and_seek/HideAndSeek.css
+++ b/react-exercises/src/components/ex7.2-hide_and_seek/HideAndSeek.css
@@ -9,7 +9,11 @@
   border: 2px solid black;
   background-color: #fff;
 }
-
+.hide-show-button{
+  margin: 5px;
+  padding: 5px;
+  box-shadow: 3px 3px 3px gray ;
+}
 .shy-box{
   margin: 10px auto;
   width: 200px;
