--- a/react-exercises/src/components/ex4.2-cards/Card.css
+++ b/react-exercises/src/components/ex4.2-cards/Card.css
@@ -43,3 +43,13 @@
   height: 250px;
   object-fit:cover;
 }
+.chucky {
+  margin: 20px;
+}
+
+.joke-block{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: pink;
+}
