--- a/react-exercises/src/components/ex13.2-avatars/Avatars.css
+++ b/react-exercises/src/components/ex13.2-avatars/Avatars.css
@@ -1,23 +1,23 @@
 .avatars-container{
-  background: url('https://ak.picdn.net/shutterstock/videos/16099804/thumb/1.jpg') no-repeat center center / cover;
+  background: linear-gradient(165deg, rgb(146, 248, 209) 0%, rgb(49, 199, 245) 40%, rgb(10, 103, 190) 98%, rgb(31, 91, 170) 100%);
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
+  min-height: 1000px;
 }
 
 .card-container-avatar {
   display: flex;
   justify-content: center;
   overflow: hidden;
-  border: 3px solid rgba(0,0,200,0.3);
+  border: 3px solid rgba(20,20,20,0.8);
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  min-width: 320px;
-  width: 320px;
+  min-width:300px;
+  width:300px;
   margin: 20px;
-  background-image: url("https://ecdn.teacherspayteachers.com/thumbitem/WATERCOLOUR-Printable-A4-Paper-37-Different-Colours-3797398-1525481571/original-3797398-2.jpg");  height: auto;
+  background: linear-gradient(165deg, rgb(255, 201, 53) 0%, rgb(225, 245, 49) 40%, rgb(28, 236, 174) 80%, rgb(144, 174, 255) 100%);
 }
 .card-container-avatar:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   text-align:left;
-  background-color: rgba(24, 50, 197, 0.2);
+  background-color: rgba(20, 20, 20, 0.3);
   color: aliceblue;
   line-height: 25px;
   width: 100%;
@@ -43,13 +43,17 @@
 }
 .avatar-img{
   width: 100%;
-  border: 1px solid black;
+  border: 3px solid rgba(0,0,0,0.8);
   margin-top: 10px;
 }
 .avatar-name{
   margin-top: 10px;
-  font-size: 24px;
-  color: rgb(142, 178, 211);
+  font-size: 20px;
+  color: rgb(90, 90, 90);
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.contact-info{
+  color: rgb(0, 116, 96);
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
