--- a/react-exercises/src/components/ex13.2-avatars/Avatars.css
+++ b/react-exercises/src/components/ex13.2-avatars/Avatars.css
@@ -24,7 +24,7 @@
 }
 
 .description-container{
-  box-shadow: 0 0 3px 0 rgba(0,0,0,0.6);
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.6);
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -43,13 +43,13 @@
 }
 .avatar-img{
   width: 100%;
-  border: 3px solid rgba(0,0,0,0.8);
+  border: 3px solid rgba(138, 39, 0, 0.5);
   margin-top: 10px;
 }
 .avatar-name{
   margin-top: 10px;
   font-size: 20px;
-  color: rgb(90, 90, 90);
+  color: rgb(221, 118, 0);
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .contact-info{
