--- a/react-exercises/src/components/ex19.2-countries_of_the_world/Countries.css
+++ b/react-exercises/src/components/ex19.2-countries_of_the_world/Countries.css
@@ -3,7 +3,58 @@
   flex-direction: column;
   height: auto;
   padding: 20px;
-  background-image: linear-gradient(to bottom right, rgb(238, 255, 0), rgb(2, 255, 36));
+  background: url('https://wallpapercave.com/wp/wp2593843.jpg');
   justify-content: center;
   align-items: center;
+}
+
+.box7{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px auto;
+  background-image: linear-gradient(to bottom right, rgba(86, 92, 0, 0.3), rgba(2, 255, 36,0.3));
+  min-height: 100vh;
+  height: auto;
+  width: 90vw;
+  border: 1px solid rgb(173, 255, 40);
+  box-shadow: 0 0 5px rgb(116, 255, 209);
+}
+
+.search-container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-image: linear-gradient(to bottom right, rgba(52, 56, 0, 0.3), rgba(0, 143, 19, 0.3));
+  border-bottom: 2px solid rgb(173, 255, 40);
+  box-shadow: 0 0 5px rgb(116, 255, 209);
+}
+.search-container>*{
+  margin: 5px 15px;
+}
+
+.countries-label{
+  font-size: 1.5rem;
+  text-shadow: -1px 0 rgb(81, 131, 0), 0 1px rgb(81, 131, 0), 1px 0 rgb(81, 131, 0), 0 -1px rgb(81, 131, 0);
+  color: #fff;
+}
+.countries-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  height: 31px;
+}
+
+#countries-search{
+  width: 50vw;
+}
+.countries-list{
+  font-size: large;
+  text-align: left;
+  width: 50vw;
+  height: 100%;
+  color: rgb(207, 255, 222);
+  text-shadow: -1px 0 rgb(36, 58, 0), 0 1px rgb(81, 131, 0), 1px 0 rgb(81, 131, 0), 0 -1px rgb(81, 131, 0);
 }
