--- a/react-exercises/src/components/ex19.3-algolia_api/Algolia.css
+++ b/react-exercises/src/components/ex19.3-algolia_api/Algolia.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   margin: 20px auto;
-  min-height: 100vh;
+  min-height: 90%;
   height: auto;
   width: 90vw;
   border: 1px solid rgb(255, 203, 252);
